# xyzTesting

./: .gitignore  .pre-commit-config.yaml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  codeql-analysis.yml
CalculatorC/: Makefile  README.md
CalculatorC/doc/: mocking.md
CalculatorC/src/: calculator.c  calculator.h  logging_service.c  logging_service.h
CalculatorC/tests/: test_calculator.c  test_calculator_mock.c
CalculatorCpp/: CMakeLists.txt  README.md
CalculatorCpp/include/: Calculator.h  Logger.h
CalculatorCpp/src/: Calculator.cpp
CalculatorCpp/tests/: test_calculator.cpp  test_calculator_mock.cpp
CalculatorJava/: README.md  pom.xml
CalculatorJava/doc/: behavior_driven_testing.md  integration_testing.md  mocking.md
CalculatorJava/src/main/java/de/hse/swt/: Calculator.java
CalculatorJava/src/main/java/de/hse/swt/logging/: ConsoleLoggingService.java  LoggingService.java  Slf4jLoggingService.java
CalculatorJava/src/main/resources/: logback.xml
CalculatorJava/src/test/java/de/hse/swt/: CalculatorIntegrationTest.java  CalculatorMockitoTest.java  CalculatorTest.java
CalculatorJava/src/test/java/de/hse/swt/runner/: CalculatorCucumberIT.java
CalculatorJava/src/test/java/de/hse/swt/steps/: CalculatorSteps.java
CalculatorJava/src/test/resources/features/: Calculator.feature
CalculatorPython/: .coveragerc  README.md  requirements.txt  setup.py
CalculatorPython/calculator/: __init__.py  calculator.py
CalculatorPython/features/: __init__.py  calculator.feature
CalculatorPython/features/steps/: steps.py
CalculatorPython/tests/: __init__.py  test_calculator.py
CalculatorRust/: Cargo.toml  README.md
CalculatorRust/src/: lib.rs
configuration_templates/: README.md  sonarqube-compose.yml
